--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/Images/wedding-rings.png" rel="icon">
   <title>Wedding Of Supun & Hasini</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -11,6 +12,7 @@
 <body>
   <div class="containerr">
     <!-- Invitation Header -->
+     <img src="/Images/wedding-rings.png" alt="Wedding RIngs" sizes="10px">
     <h1>Welcome to the celebration of our wedding</h1>
     <h2 class="couple-names">Supun <span>&</span> Hasini</h2>
     
@@ -93,7 +95,7 @@
       </div>
     </div>
 
-    <section class="rsvp">
+    <section class="rsvp" hidden>
         <h2>RSVP</h2>
         <form id="rsvpForm">
             <input type="text" name="name" placeholder="Your Name" required />
@@ -104,10 +106,11 @@
     </section>
 
     <section class="contact">
-        <h2>Contact Us</h2>
-        <p>Email : sooryasenasupun@gmail.com</p>
-        <p>Supun : +94 77 008 9194</p>
-        <p>Hasini : +94 77 992 9657</p>
+        <h2>RSVP</h2>
+        <p>Email : <a href="mailto:sooryasenasupun@gmail.com">sooryasenasupun@gmail.com</a></p>
+        <p>Supun : <a href="tel:+94 77 008 9194">+94 77 008 9194</a></p>
+        <p>Hasini : <a href="tel:+94 77 992 9657">+94 77 992 9657</a></p>
+      
     </section>
   </div>
 
