--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="containerr">
     <!-- Invitation Header -->
-     <img src="/Images/wedding-rings.png" alt="Wedding RIngs" sizes="10px">
+     <img src="/Images/wedding-rings.png" alt="Wedding RIngs" sizes="10px" hidden>
     <h1>Welcome to the celebration of our wedding</h1>
     <h2 class="couple-names">Supun <span>&</span> Hasini</h2>
     
