--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/Images/wedding-rings.png" rel="icon">
+  <link href="/images/wedding-rings.png" rel="icon">
   <title>Wedding Of Supun & Hasini</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
 <body>
   <div class="containerr">
     <!-- Invitation Header -->
-     <img src="/Images/wedding-rings.png" alt="Wedding RIngs" sizes="10px" hidden>
+     <img src="/images/wedding-rings.png" alt="Wedding RIngs" sizes="10px" hidden>
     <h1>Welcome to the celebration of our wedding</h1>
     <h2 class="couple-names">Supun <span>&</span> Hasini</h2>
     
