--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
   <div class="containerr">
+
+  <div class="hero">
     <!-- Invitation Header -->
      <img src="/images/wedding-rings.png" alt="Wedding RIngs" sizes="10px" hidden>
     <h1>Welcome to the celebration of our wedding</h1>
@@ -30,7 +32,7 @@
       <div class="time-unit"><span id="minutes"></span><p>Minutes</p></div>
       <div class="time-unit"><span id="seconds"></span><p>Seconds</p></div>
     </div>
-
+  </div>
     <!-- Wedding Events Timeline -->
     <h1>Our Wedding Day Plan</h1>
     <p >We Hope You have a Great Time</p>
