--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Wedding Date and Time -->
     <div class="wedding-info">
       <p>2025 JANUARY <span class="date">15</span></p>
-      <p><span class="day">WEDNESDAY</span> <span class="time">8:00 A.M.</span></p>
+      <p><span class="day">WEDNESDAY</span> </p>
 
     </div>
 
@@ -35,19 +35,19 @@
   </div>
     <!-- Wedding Events Timeline -->
     <h1>Our Wedding Day Plan</h1>
-    <p >We Hope You have a Great Time</p>
+    <p >We look forward to seeing you</p>
     <div class="timeline">
     
         <div class="container left">
           <div class="content cleft">
-            <h4>8.00 AM Onwords</h4>
+            <h4>8.00 AM Onwards</h4>
             <p>Ceremony</p>
             <p>St. Joseph's Church - Wennappuwa</p>
           </div>
         </div>
         <div class="container right">
           <div class="content cright">
-            <h4>9.30 AM Onwords</h4>
+            <h4>9.30 AM Onwards</h4>
             <p>Tea table</p>
             <p>ORION Hall, Kumudu Valley Resort, Nainamadama </p>
           </div>
@@ -61,7 +61,7 @@
         </div>
         <div class="container right">
           <div class="content cright">
-            <h4>12.00 PM Onwords</h4>
+            <h4>12.00 PM Onwards</h4>
             <p>Reception</p>
           </div>
         </div>
