--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="content cright">
             <h4>9.30 AM Onwards</h4>
             <p>Tea table</p>
-            <p>ORION Hall, Kumudu Valley Resort, Nainamadama </p>
+            <p>Orion Hall, Kumudu Valley Resort, Nainamadama </p>
           </div>
         </div>
         <div class="container left">
